third_party/move/move-prover/tests/sources/functional/inline-lambda.exp
Move prover returns: exiting with verification errors
error: unknown assertion failed
  ┌─ tests/sources/functional/inline-lambda.move:7:13
  │
7 │             assert predicate(v);
  │             ^^^^^^^^^^^^^^^^^^^^
  │
  =     at tests/sources/functional/inline-lambda.move:12: test_apply
  =         a1 = <redacted>
  =         a2 = <redacted>
  =     at tests/sources/functional/inline-lambda.move:6: apply
  =     at tests/sources/functional/inline-lambda.move:7: apply
  =     at tests/sources/functional/inline-lambda.move:9: apply
  =     at tests/sources/functional/inline-lambda.move:13: test_apply
  =         v = <redacted>
  =         result = <redacted>
  =     at tests/sources/functional/inline-lambda.move:13: test_apply
  =         r1 = <redacted>
  =     at tests/sources/functional/inline-lambda.move:15: test_apply
  =     at tests/sources/functional/inline-lambda.move:6: apply
  =     at tests/sources/functional/inline-lambda.move:7: apply

error: unknown assertion failed
   ┌─ tests/sources/functional/inline-lambda.move:20:13
   │
20 │             assert !r2;
   │             ^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:12: test_apply
   =         a1 = <redacted>
   =         a2 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:6: apply
   =     at tests/sources/functional/inline-lambda.move:7: apply
   =     at tests/sources/functional/inline-lambda.move:9: apply
   =     at tests/sources/functional/inline-lambda.move:13: test_apply
   =         v = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:13: test_apply
   =         r1 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:15: test_apply
   =     at tests/sources/functional/inline-lambda.move:6: apply
   =     at tests/sources/functional/inline-lambda.move:7: apply
   =     at tests/sources/functional/inline-lambda.move:9: apply
   =     at tests/sources/functional/inline-lambda.move:18: test_apply
   =         a1 = <redacted>
   =         a2 = <redacted>
   =         v = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:18: test_apply
   =         r2 = <redacted>
   =     at tests/sources/functional/inline-lambda.move:20: test_apply

error: unknown assertion failed
   ┌─ tests/sources/functional/inline-lambda.move:32:13
   │
32 │             assert w == e(x); // e is translated into an uninterpreted spec fun
   │             ^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:75: call_inline_fail_1
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:76: call_inline_fail_1
   =         z = <redacted>
   =     at tests/sources/functional/inline-lambda.move:24: inline_1
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:25: inline_1
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:26: inline_1
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         z = <redacted>
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         z' = <redacted>
   =     at tests/sources/functional/inline-lambda.move:27: inline_1
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         y = <redacted>
   =         z = <redacted>
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =     enter loop
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:81: call_inline_fail_1
   =         w = <redacted>
   =     at tests/sources/functional/inline-lambda.move:29: inline_1
   =     at tests/sources/functional/inline-lambda.move:30: inline_1
   =     at tests/sources/functional/inline-lambda.move:31: inline_1
   =     at tests/sources/functional/inline-lambda.move:32: inline_1

error: unknown assertion failed
   ┌─ tests/sources/functional/inline-lambda.move:32:13
   │
32 │             assert w == e(x); // e is translated into an uninterpreted spec fun
   │             ^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:84: call_inline_fail_2
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:85: call_inline_fail_2
   =         z = <redacted>
   =     at tests/sources/functional/inline-lambda.move:24: inline_1
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:25: inline_1
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:26: inline_1
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         z = <redacted>
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         z' = <redacted>
   =     at tests/sources/functional/inline-lambda.move:89: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:90: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:91: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:27: inline_1
   =     at tests/sources/functional/inline-lambda.move:89: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:90: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:91: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         y = <redacted>
   =         z = <redacted>
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =     enter loop
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:94: call_inline_fail_2
   =         w = <redacted>
   =     at tests/sources/functional/inline-lambda.move:29: inline_1
   =     at tests/sources/functional/inline-lambda.move:30: inline_1
   =     at tests/sources/functional/inline-lambda.move:31: inline_1
   =     at tests/sources/functional/inline-lambda.move:32: inline_1

error: function does not abort under this condition
   ┌─ tests/sources/functional/inline-lambda.move:78:13
   │
78 │             aborts_if x > 0; // This does not verify
   │             ^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         y = <redacted>
   =         z = <redacted>
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =     enter loop
   =     at tests/sources/functional/inline-lambda.move:77: call_inline_fail_1
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:78: call_inline_fail_1

error: precondition does not hold at this call
   ┌─ tests/sources/functional/inline-lambda.move:89:13
   │
89 │             requires x > 0; // This does not verify at the call site
   │             ^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:84: call_inline_fail_2
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:85: call_inline_fail_2
   =         z = <redacted>
   =     at tests/sources/functional/inline-lambda.move:24: inline_1
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:25: inline_1
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:26: inline_1
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         z = <redacted>
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         z' = <redacted>
   =     at tests/sources/functional/inline-lambda.move:89: call_inline_fail_2

error: precondition does not hold at this call
   ┌─ tests/sources/functional/inline-lambda.move:90:13
   │
90 │             requires z > 5; // This does not verify at the call site
   │             ^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:84: call_inline_fail_2
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:85: call_inline_fail_2
   =         z = <redacted>
   =     at tests/sources/functional/inline-lambda.move:24: inline_1
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:25: inline_1
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         y = <redacted>
   =     at tests/sources/functional/inline-lambda.move:26: inline_1
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         z = <redacted>
   =         x = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         z' = <redacted>
   =     at tests/sources/functional/inline-lambda.move:89: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:90: call_inline_fail_2

error: post-condition does not hold
   ┌─ tests/sources/functional/inline-lambda.move:92:13
   │
92 │             ensures result == (x == 5); //  This does not verify
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:89: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:90: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:91: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         y = <redacted>
   =         z = <redacted>
   =         x = <redacted>
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =     enter loop
   =     at tests/sources/functional/inline-lambda.move:86: call_inline_fail_2
   =         result = <redacted>
   =     at tests/sources/functional/inline-lambda.move:88: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:91: call_inline_fail_2
   =     at tests/sources/functional/inline-lambda.move:92: call_inline_fail_2
